--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>pl_adira</title>
+    <title>pl_Bfi</title>
     <!-- SEO Meta Tags-->
     <meta name="description" content="" />
     <meta
@@ -330,7 +330,7 @@
             <h2 class="mb-2 h4 text-dark">Solusi Pinjaman Dana Tunai</h2>
 
             <p class="mb-4 pb-2 text-muted">
-              Adira Finance menawarkan fasilitas Pinjaman Dana Tunai dengan
+              Bfi Finance menawarkan fasilitas Pinjaman Dana Tunai dengan
               jaminan BPKB sepeda motor/mobil, dengan syarat mudah dan proses
               cepat.
             </p>
@@ -398,11 +398,7 @@
               <div class="row">
                 <div class="col-6 col-md-3">
                   <div class="text-center">
-                    <img
-                      src="https://www.adira.co.id/assets/mpl/img/pengajuan-1.png"
-                      alt=""
-                      class="w-100"
-                    />
+                    <img src="images/pengajuan-1.png" alt="" class="w-100" />
                     <p class="text-dark"><b>Isi Form Pengajuan</b></p>
                     <p>
                       Siapkan dan isi data Jaminan BPKB Motor/Mobil serta
@@ -412,46 +408,34 @@
                 </div>
                 <div class="col-6 col-md-3">
                   <div class="text-center">
-                    <img
-                      src="https://www.adira.co.id/assets/mpl/img/pengajuan-2.png"
-                      alt=""
-                      class="w-100"
-                    />
+                    <img src="images/pengajuan-2.png" alt="" class="w-100" />
                     <p class="text-dark">
                       <b>Konfirmasi Data Penganjuan</b>
                     </p>
                     <p>
-                      Sahabat akan dihubungi oleh Tim Adira Finance untuk
+                      Sahabat akan dihubungi oleh Tim Bfi Finance untuk
                       konfirmasi Pinjaman Jaminan BPKB yang telah Sahabat ajukan
                     </p>
                   </div>
                 </div>
                 <div class="col-6 col-md-3">
                   <div class="text-center">
-                    <img
-                      src="https://www.adira.co.id/assets/mpl/img/pengajuan-3.png"
-                      alt=""
-                      class="w-100"
-                    />
+                    <img src="images/pengajuan-3.png" alt="" class="w-100" />
                     <p class="text-dark"><b>Survei</b></p>
                     <p>
-                      Tim Adira Finance akan melakukan survei dan validasi
-                      terkait pengajuan Pinjman Jaminan BPKB Sahabat
+                      Tim Bfi Finance akan melakukan survei dan validasi terkait
+                      pengajuan Pinjman Jaminan BPKB Sahabat
                     </p>
                   </div>
                 </div>
                 <div class="col-6 col-md-3">
                   <div class="text-center">
-                    <img
-                      src="https://www.adira.co.id/assets/mpl/img/pengajuan-4.png"
-                      alt=""
-                      class="w-100"
-                    />
+                    <img src="images/pengajuan-4.png" alt="" class="w-100" />
                     <p class="text-dark"><b>Pencairan Dana</b></p>
                     <p>
                       Apabila pengajuan Sahabat disetujui, dana akan segera
                       dicairkan ke rekening Sahabat atau dapat diambil tunai di
-                      cabang Adira Finance
+                      cabang Bfi Finance
                     </p>
                   </div>
                 </div>
@@ -684,7 +668,7 @@
           <div class="col-lg-6 col-md-6 pt-5 pb-3 py-md-5 text-center">
             <h2 class="h1 text-center">Hubungi Kami</h2>
             <p class="text-center pb-4 mb-2 mb-lg-3">
-              Kami Adira Finance *cbg 24 jam siap Melayani
+              Kami Bfi Finance *cbg 24 jam siap Melayani
             </p>
             <a
               target="_blank"
@@ -693,7 +677,7 @@
               <img
                 src="https://netfin.id/site-assets/netfin/button-wa.png"
                 class="rounded mx-auto"
-                alt="adira finance whatsapp"
+                alt="Bfi finance whatsapp"
                 style="width: 300px"
               /> </a
             ><br />
@@ -708,7 +692,7 @@
         <p class="text-center">
           *) Estimasi nilai pinjaman jaminan BPKB bukan merupakan persetujuan
           pinjaman dana, bersifat tidak mengikat, dan dapat disesuaikan
-          berdasarkan penilaian lebih lanjut serta kebijakan Adira Finance.
+          berdasarkan penilaian lebih lanjut serta kebijakan Bfi Finance.
         </p>
         <div class="row">
           <div class="col-12 col-md-6">
