--- a/index.html
+++ b/index.html
@@ -230,16 +230,13 @@
       </header>
       <!-- Page content-->
       <!-- Hero-->
-      <section
-        class="container-fluid hero d-none d-lg-block"
-        style="
-          background-image: url(images/baner\ hero\ desktop\ \(1\).webp);
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-position: top;
-          height: 80vh;
-        "
-      ></section>
+      <section class="container-fluid hero d-none d-lg-block p-5" style="">
+        <img
+          src="images/baner hero desktop (1).webp"
+          class="rounded-2"
+          alt=""
+        />
+      </section>
 
       <section class="container d-md-none d-block px-0">
         <img
@@ -256,7 +253,7 @@
 
       <!-- Section2 -->
       <section class="container-fluid bg-faded-dark py-4 px-lg-7 px-0">
-        <div class="row align-items-center px-lg-7 px-5">
+        <div class="row align-items-center px-lg-7 p-5">
           <div class="col-lg-6 mb-md-0 mb-grid-gutter px-lg-7 px-0 pe-0">
             <div
               id="carouselExampleAutoplaying"
