--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta name="author" content="Createx Studio" />
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Browser Logo -->
+    <link rel="icon" href="https://www.bfi.co.id/static/images/logo-bfi.png" />
+
     <!-- Favicon and Touch Icons-->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
